hphp/test/slow/sealed/sealed_classes4.php.expectf
Fatal error: Class SomeOtherOtherInterface may not inherit from sealed interface (SomeSealedInterface) without being in the whitelist in %s/hphp/test/slow/sealed/sealed_classes4.php on line 8
